#61 move operations into a separate domain module