@@ -2,7 +2,6 @@ package pro.api4.jsonapi4j.sampleapp.operations.country;
 
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.CollectionUtils;
-import org.springframework.stereotype.Component;
 import pro.api4.jsonapi4j.domain.ResourceType;
 import pro.api4.jsonapi4j.operation.ReadResourceByIdOperation;
 import pro.api4.jsonapi4j.operation.annotation.JsonApiResourceOperation;
@@ -11,7 +10,7 @@ import pro.api4.jsonapi4j.operation.plugin.oas.model.OasOperationInfo.Parameter;
 import pro.api4.jsonapi4j.operation.plugin.oas.model.OasOperationInfo.SecurityConfig;
 import pro.api4.jsonapi4j.processor.exception.ResourceNotFoundException;
 import pro.api4.jsonapi4j.request.JsonApiRequest;
-import pro.api4.jsonapi4j.sampleapp.config.datasource.CountriesClient;
+import pro.api4.jsonapi4j.sampleapp.operations.CountriesClient;
 import pro.api4.jsonapi4j.sampleapp.config.datasource.model.country.DownstreamCountry;
 import pro.api4.jsonapi4j.sampleapp.domain.country.CountryResource;
 import pro.api4.jsonapi4j.sampleapp.operations.country.validation.CountryInputParamsValidator;
@@ -36,7 +35,6 @@ import static pro.api4.jsonapi4j.sampleapp.operations.country.ReadMultipleCountr
         }
 )
 @RequiredArgsConstructor
-@Component
 public class ReadCountryByIdOperation implements ReadResourceByIdOperation<DownstreamCountry> {
 
     private final CountriesClient client;
@@ -47,7 +45,7 @@ public class ReadCountryByIdOperation implements ReadResourceByIdOperation<Downs
         if (CollectionUtils.isEmpty(result)) {
             throw new ResourceNotFoundException(id, new ResourceType("countries"));
         }
-        return result.get(0);
+        return result.getFirst();
     }
 
     @Override
